Fix uneven writers boxes again
#168

--- a/stylesheets/writers-page.scss
+++ b/stylesheets/writers-page.scss
@@ -10,7 +10,7 @@
     float:left;
     text-align:center;
     display:block;
-    min-height:310px;
+    min-height:320px;
     margin:0 2% 40px;
     .image img {
       max-width:100%;
